CORRECTIOIN OVERFLOW

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    width: 100;
+    overflow-x: hidden;
+    width: 100%;
 
 }
 .container{
